--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
+    "react-hot-toast": "^2.4.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-toast-notifications": "^2.5.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
